--- a/application.yml
+++ b/application.yml
@@ -1,13 +1,13 @@
 spring:
     profiles:
         active: dev
-        
+-------        
 spring:
     profiles: dev
     application:
         name: springcloud-config-dev
-        
+--------        
 spring:
-    profiles: dev
+    profiles: test
     application:
         name: springcloud-config-test
